--- a/BST/styles.css
+++ b/BST/styles.css
@@ -10,30 +10,105 @@ body,
 main {
   height: 100vh;
   width: 100vw;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 1px;
 }
 
 main {
   display: flex;
 }
 
+h1 {
+  display: inline;
+}
+
 nav {
-  padding: 0.8em 1.8em;
+  background-color: rgba(58, 104, 204, 0.8);
+  color: white;
+  padding: 0.4em 1.5em;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  gap: 10px;
+}
+nav img {
+  display: inline;
+  width: 50px;
+  height: 50px;
+}
+
+.node {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid black;
+  text-align: center;
+  padding: 0.5em;
+  font-size: 1.18rem;
+}
+.node::before, .node::after {
+  content: "";
+  position: absolute;
+  bottom: -25px;
+  height: 30px;
+  width: 1px;
+  background-color: black;
+}
+.node::before {
+  left: 5px;
+  transform: rotate(45deg);
+}
+.node::after {
+  right: 5px;
+  transform: rotate(-45deg);
+}
+.node:hover {
+  background-color: #308adf;
+  border-width: 1px;
+  transform: scale(1.15);
+  box-shadow: 0px 0px 6px 0px black;
+  transition: transform 0.1s ease-out;
+}
+
+input:focus {
+  outline: 1px solid grey;
+}
+input:focus::-moz-placeholder {
+  color: transparent;
+}
+input:focus::placeholder {
+  color: transparent;
 }
 
 input,
 button {
   padding: 10px;
-  width: 70%;
   font-family: Arial, sans-serif;
   font-size: 16px;
   border-radius: 3px;
   border: none;
+  min-width: 80px;
+  max-width: 400px;
+  font-style: inherit;
 }
 
 h3 {
   font-size: 2rem;
   text-align: center;
   margin-top: 0.5em;
+}
+
+.intro {
+  padding: 0.5em 0.7em;
+}
+.intro p {
+  line-height: 1.5;
+  letter-spacing: 2px;
+  color: rgb(247, 103, 51);
+  font-size: 2.3rem;
+  font-family: "Pacifico";
 }
 
 /*Input section */
@@ -45,20 +120,61 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
-  /* border: 1px solid red; */
-  margin: 5em 1em;
+  margin: 2em 1em;
 }
-#inputSection button {
-  width: 50%;
+#inputSection #btn {
+  width: 40%;
   background-color: #56a4e4;
   color: white;
   cursor: pointer;
 }
-#inputSection button:hover {
+#inputSection #btn:hover {
+  background-color: #308adf;
+}
+#inputSection .traversal_btn {
+  cursor: pointer;
+  display: inline-block;
+  width: 25%;
+  background-color: #56a4e4;
+  color: white;
+}
+#inputSection .traversal_btn:not(:first-of-type) {
+  margin-left: 0.6em;
+}
+#inputSection .traversal_btn:hover {
   background-color: #308adf;
 }
 
 #treeSection {
   flex: 1;
   background-color: #e1e1e1;
+}
+
+#tree_cont {
+  position: relative;
+}
+
+.traversals {
+  font-size: 1.2rem;
+}
+
+/* Error Message */
+.alert {
+  font-size: 1.15rem;
+  display: none;
+  background-color: rgba(255, 0, 0, 0.2);
+}
+.alert p {
+  color: rgb(255, 0, 0);
+  width: 92%;
+  text-align: center;
+}
+.alert button {
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: transparent;
+}
+.alert button:hover {
+  transform: scale(0.85);
 }/*# sourceMappingURL=styles.css.map */
