--- a/STACK/styles.scss
+++ b/STACK/styles.scss
@@ -10,10 +10,9 @@ $border_radius:4px;
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
     width: 100vw;
     height: 100vh;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Oswald', sans-serif;
     overflow-y: hidden;
 }
 
@@ -31,8 +30,8 @@ p{
 
 // Header Designing
 header{
-    background-color: rgba(58, 104, 204, 0.8);
     padding: .8em 1.2em;
+    background-color: rgba(58, 104, 204, 0.8);
     nav{
         display: flex;
         align-items: center;
@@ -56,8 +55,19 @@ header{
         height: 100%;
         background-color: rgba(0,0,0,.05);
         margin-right: 10px;
+        .intro{
+            padding: .5em 0;
+            padding-left: 1.6em;
+            p{
+                font-family: "Pacifico";
+                line-height: 1.5;
+                letter-spacing: 4px;
+                color: rgb(247, 103, 51);
+                font-size: 2.5rem;
+            }
+        }
         .input_div{
-            margin: 4em 1.8em;
+            margin: 2em 1.8em;
             input{
                 padding: 3px 5px;
                 width: 150px;
@@ -118,7 +128,9 @@ header{
                     font-size: 1rem;
                 }
                 .node{
-                    background-color: rgb(255, 165, 0);
+                    font-family: Arial, sans-serif;
+                    background-color: #56a4e4;
+                    color: white;
                     font-size: 1.1rem;
                     padding: 1em;
                     text-align: center;
@@ -129,6 +141,27 @@ header{
                 }
             }
             
+        }
+    }
+}
+
+.alert{
+    padding: 2px 0;
+    font-size: 1.15rem;
+    display: none;
+    background-color: rgba(255, 0, 0, 0.3);
+    p{
+        color: rgb(255, 0, 0);
+        width: 92%;
+        text-align: center;
+    }
+    button{
+        border: none;
+        padding: 5px;
+        cursor: pointer;
+        background-color: transparent;
+        &:hover{
+            transform: scale(.85);
         }
     }
 }
