--- a/BST/styles.css
+++ b/BST/styles.css
@@ -25,7 +25,7 @@ h1 {
 
 nav {
   background-color: rgba(58, 104, 204, 0.8);
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 0.4em 1.5em;
   display: flex;
   align-content: center;
@@ -65,7 +65,7 @@ nav img {
   transform: rotate(-45deg);
 }
 .node:hover {
-  background-color: #308adf;
+  background-color: #56a4e4;
   border-width: 1px;
   transform: scale(1.15);
   box-shadow: 0px 0px 6px 0px black;
@@ -125,7 +125,7 @@ h3 {
 #inputSection #btn {
   width: 40%;
   background-color: #56a4e4;
-  color: white;
+  color: rgb(255, 255, 255);
   cursor: pointer;
 }
 #inputSection #btn:hover {
@@ -136,7 +136,7 @@ h3 {
   display: inline-block;
   width: 25%;
   background-color: #56a4e4;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 #inputSection .traversal_btn:not(:first-of-type) {
   margin-left: 0.6em;
@@ -165,7 +165,7 @@ h3 {
   background-color: rgba(255, 0, 0, 0.2);
 }
 .alert p {
-  color: rgb(255, 0, 0);
+  color: rgba(255, 0, 0, 0.9);
   width: 92%;
   text-align: center;
 }
