--- a/BST/styles.scss
+++ b/BST/styles.scss
@@ -1,3 +1,12 @@
+// Define variables for frequently used properties
+$primary-color: #56a4e4;
+$secondary-color: #308adf;
+$text-color: rgb(255, 255, 255);
+$border-radius: 3px;
+$input-font-size: 16px;
+$tree-section-background: #e1e1e1;
+$alert-background: rgba(255, 0, 0, 0.2);
+
 *,
 *::after,
 *::before {
@@ -8,7 +17,6 @@
 
 body,
 main {
-
     height: 100vh;
     width: 100vw;
     font-size: 20px;
@@ -19,31 +27,34 @@ main {
 main {
     display: flex;
 }
-h1{
+
+h1 {
     display: inline;
 }
+
 nav {
     background-color: rgba(58, 104, 204, 0.8);
-    color: white;
+    color: $text-color;
     padding: 0.4em 1.5em;
     display: flex;
     align-content: center;
     align-items: center;
     gap: 10px;
-    img{
+    img {
         display: inline;
         width: 50px;
         height: 50px;
     }
 }
-.node{
+
+.node {
     position: absolute;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: 1px solid black;
     text-align: center;
-    padding: .5em;
+    padding: 0.5em;
     font-size: 1.18rem;
     &::before,
     &::after {
@@ -58,13 +69,12 @@ nav {
         left: 5px;
         transform: rotate(45deg);
     }
-    
     &::after {
         right: 5px;
         transform: rotate(-45deg);
     }
-    &:hover{
-        background-color: #308adf;
+    &:hover {
+        background-color: $primary-color;
         border-width: 1px;
         transform: scale(1.15);
         box-shadow: 0px 0px 6px 0px black;
@@ -72,7 +82,7 @@ nav {
     }
 }
 
-input:focus{
+input:focus {
     outline: 1px solid grey;
     &::placeholder {
         color: transparent;
@@ -83,23 +93,23 @@ input,
 button {
     padding: 10px;
     font-family: Arial, sans-serif;
-    font-size: 16px;
-    border-radius: 3px;
+    font-size: $input-font-size;
+    border-radius: $border-radius;
     border: none;
     min-width: 80px;
     max-width: 400px;
     font-style: inherit;
 }
 
-h3{
+h3 {
     font-size: 2rem;
     text-align: center;
-    margin-top: .5em;
+    margin-top: 0.5em;
 }
 
-.intro{
-    padding: .5em .7em;
-    p{
+.intro {
+    padding: 0.5em 0.7em;
+    p {
         line-height: 1.5;
         letter-spacing: 2px;
         color: rgb(247, 103, 51);
@@ -120,61 +130,58 @@ h3{
     }
     #btn {
         width: 40%;
-        background-color: #56a4e4;
-        color: white;
+        background-color: $primary-color;
+        color: $text-color;
         cursor: pointer;
         &:hover {
-            background-color: #308adf;
+            background-color: $secondary-color;
         }
     }
-    .traversal_btn{
+    .traversal_btn {
         cursor: pointer;
         display: inline-block;
         width: 25%;
-        background-color: #56a4e4;
-        color: white;
-        &:not(:first-of-type){
-            margin-left: .6em;
+        background-color: $primary-color;
+        color: $text-color;
+        &:not(:first-of-type) {
+            margin-left: 0.6em;
         }
-        &:hover{
-            background-color: #308adf;
+        &:hover {
+            background-color: $secondary-color;
         }
     }
-    
 }
 
 #treeSection {
     flex: 1;
-    background-color: #e1e1e1;
+    background-color: $tree-section-background;
 }
 
-#tree_cont{
+#tree_cont {
     position: relative;
 }
 
-.traversals{
+.traversals {
     font-size: 1.2rem;
-
 }
 
 /* Error Message */
-
-.alert{
+.alert {
     font-size: 1.15rem;
     display: none;
-    background-color: rgba(255, 0, 0, 0.2);
-    p{
-        color: rgb(255, 0, 0);
+    background-color: $alert-background;
+    p {
+        color: rgba(255, 0, 0,.9);
         width: 92%;
         text-align: center;
     }
-    button{
+    button {
         padding: 5px;
         cursor: pointer;
-        border-radius:50% ;
+        border-radius: 50%;
         background-color: transparent;
-        &:hover{
-            transform: scale(.85);
+        &:hover {
+            transform: scale(0.85);
         }
     }
 }
